--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "require": {
     "php": "^7.4",
     "ext-json": "*",
-    "pimcore/pimcore": "6.8.x-dev",
+    "pimcore/pimcore": "^6.7.0",
     "ruflin/elastica": "^7.0"
   },
   "require-dev": {
