--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -35,3 +35,23 @@ parameters:
 			count: 1
 			path: src/Command/Index.php
 
+		-
+			message: "#^Property Valantic\\\\ElasticaBridgeBundle\\\\EventListener\\\\Pimcore\\\\AbstractListener\\:\\:\\$indices \\(array\\<Valantic\\\\ElasticaBridgeBundle\\\\Index\\\\IndexInterface\\>\\) does not accept array\\<string, object\\>\\.$#"
+			count: 1
+			path: src/EventListener/Pimcore/AbstractListener.php
+
+		-
+			message: "#^Property Valantic\\\\ElasticaBridgeBundle\\\\EventListener\\\\Pimcore\\\\AbstractListener\\:\\:\\$documents \\(array\\<Valantic\\\\ElasticaBridgeBundle\\\\DocumentType\\\\DocumentInterface\\>\\) does not accept array\\<string, object\\>\\.$#"
+			count: 1
+			path: src/EventListener/Pimcore/AbstractListener.php
+
+		-
+			message: "#^Property Valantic\\\\ElasticaBridgeBundle\\\\EventListener\\\\Pimcore\\\\AbstractListener\\:\\:\\$indexDocuments \\(array\\<Valantic\\\\ElasticaBridgeBundle\\\\DocumentType\\\\Index\\\\IndexDocumentInterface\\>\\) does not accept array\\<string, object\\>\\.$#"
+			count: 1
+			path: src/EventListener/Pimcore/AbstractListener.php
+
+		-
+			message: "#^Parameter \\#1 \\$query of method Elastica\\\\Index\\:\\:search\\(\\) expects array\\|Elastica\\\\Query\\|string, Elastica\\\\Query\\\\AbstractQuery given\\.$#"
+			count: 1
+			path: src/Index/AbstractIndex.php
+
