--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -31,3 +31,15 @@ services:
     arguments:
       $host: '%valantic_elastica_bridge.client.host%'
       $port: '%valantic_elastica_bridge.client.port%'
+  Valantic\ElasticaBridgeBundle\EventListener\Pimcore\DataObject:
+    arguments:
+      - !tagged_iterator valantic.elastica_bridge.index
+      - !tagged_iterator valantic.elastica_bridge.document
+      - !tagged_iterator valantic.elastica_bridge.document_index
+    tags:
+      - { name: kernel.event_listener, event: pimcore.dataobject.postAdd, method: added }
+      - { name: kernel.event_listener, event: pimcore.dataobject.postUpdate, method: updated }
+      - { name: kernel.event_listener, event: pimcore.dataobject.postDelete, method: deleted }
+
+  Valantic\ElasticaBridgeBundle\Service\:
+    resource: '../../Service/*'
