--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -38,5 +38,8 @@ jobs:
       - name: Install Composer dependencies
         run: composer install --no-progress --prefer-dist --optimize-autoloader
 
-      - name: Test with phpstan
+      - name: Ensure code style using php-cs-fixer
+        run: composer run phpcs-check
+
+      - name: Static analysis using phpstan
         run: composer run phpstan
