--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -2,17 +2,51 @@ name: PHP Checks
 
 on: [ push, pull_request ]
 
+defaults:
+
+  strategy:
+    fail-fast: false
+    matrix:
+      operating-system: [ ubuntu-latest ]
+      php-versions: [ '7.4' ]
+
 jobs:
   phpstan:
 
     name: phpstan (PHP ${{ matrix.php-versions }} on ${{ matrix.operating-system }})
     runs-on: ${{ matrix.operating-system }}
 
-    strategy:
-      fail-fast: false
-      matrix:
-        operating-system: [ ubuntu-latest ]
-        php-versions: [ '7.4' ]
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Setup PHP, with composer and extensions
+        uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
+        with:
+          php-version: ${{ matrix.php-versions }}
+          extensions: curl
+          coverage: xdebug
+
+      - name: Get composer cache directory
+        id: composer-cache
+        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+
+      - name: Cache composer dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
+
+      - name: Install Composer dependencies
+        run: composer install --no-progress --prefer-dist --optimize-autoloader
+
+      - name: Static analysis using phpstan
+        run: composer run phpstan
+
+  phpcs:
+
+    name: phpcs (PHP ${{ matrix.php-versions }} on ${{ matrix.operating-system }})
+    runs-on: ${{ matrix.operating-system }}
 
     steps:
       - uses: actions/checkout@v2
@@ -40,6 +74,3 @@ jobs:
 
       - name: Ensure code style using php-cs-fixer
         run: composer run phpcs-check
-
-      - name: Static analysis using phpstan
-        run: composer run phpstan
