--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
 /.github export-ignore
 /example export-ignore
+/package.json export-ignore
+/phpstan-baseline.neon export-ignore
+/phpstan.neon export-ignore
 /vendor-bin export-ignore
+/yarn.lock export-ignore
