--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,9 @@
     ]
   },
   "config": {
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "bamarni/composer-bin-plugin": true
+    }
   }
 }
