--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,8 @@
   "config": {
     "sort-packages": true,
     "allow-plugins": {
-      "bamarni/composer-bin-plugin": true
+      "bamarni/composer-bin-plugin": true,
+      "ocramius/package-versions": true
     }
   }
 }
