--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,10 +1,9 @@
 parameters:
 	ignoreErrors:
-
 		-
 			message: "#^Comparison operation \"\\>\" between 0 and 0 is always false\\.$#"
 			count: 1
-			path: src/Command/Index.php
+			path: src/Command/PopulateIndex.php
 
 		-
 			message: "#^Method Valantic\\\\ElasticaBridgeBundle\\\\Repository\\\\DocumentRepository\\:\\:__construct\\(\\) has parameter \\$documents with no value type specified in iterable type iterable\\.$#"
