--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -4,43 +4,6 @@ on: [ push, pull_request ]
 
 
 jobs:
-  phpstan_pimcore6:
-
-    name: phpstan for Pimcore 6 (PHP ${{ matrix.php-versions }} on ${{ matrix.operating-system }})
-    runs-on: ${{ matrix.operating-system }}
-
-    strategy:
-      fail-fast: false
-      matrix:
-        operating-system: [ ubuntu-latest ]
-        php-versions: [ '7.4' ]
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Setup PHP, with composer and extensions
-        uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
-        with:
-          php-version: ${{ matrix.php-versions }}
-          extensions: curl
-          coverage: xdebug
-
-      - name: Get composer cache directory
-        id: composer-cache
-        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
-
-      - name: Cache composer dependencies
-        uses: actions/cache@v2
-        with:
-          path: ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-composer-pimcore6
-          restore-keys: ${{ runner.os }}-composer-pimcore6
-
-      - name: Require Pimcore 6.x
-        run: composer require pimcore/pimcore:^6.7 --no-progress --prefer-dist
-
-      - name: Static analysis using phpstan
-        run: composer run phpstan -- --error-format=github
 
   phpstan_pimcore10:
 
@@ -51,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ ubuntu-latest ]
-        php-versions: [ '8.0' ]
+        php-versions: [ '8.0', '8.1' ]
 
     steps:
       - uses: actions/checkout@v2
