--- a/composer.json
+++ b/composer.json
@@ -52,10 +52,10 @@
     "phpstan": [
       "vendor/bin/phpstan analyse src --memory-limit=1G"
     ],
-    "phpcs": [
+    "php-cs-fixer": [
       "vendor-bin/phpcs/vendor/bin/php-cs-fixer fix --diff"
     ],
-    "phpcs-check": [
+    "php-cs-fixer-check": [
       "vendor-bin/phpcs/vendor/bin/php-cs-fixer fix --diff --dry-run"
     ],
     "rector": [
