--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "phpstan/extension-installer": "^1.2",
     "phpstan/phpstan": "^1.9.12",
     "phpstan/phpstan-deprecation-rules": "^1.1.1",
-    "rector/rector": "^0.14.8"
+    "rector/rector": "^0.14.8",
+    "roave/security-advisories": "dev-latest"
   },
   "license": "MIT",
   "authors": [
