--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,7 +1,22 @@
 parameters:
 	ignoreErrors:
 		-
+			message: "#^Construct empty\\(\\) is not allowed\\. Use more strict comparison\\.$#"
+			count: 1
+			path: src/Command/Index.php
+
+		-
 			message: "#^Comparison operation \"\\>\" between 0 and 0 is always false\\.$#"
+			count: 1
+			path: src/Command/PopulateIndex.php
+
+		-
+			message: "#^Construct empty\\(\\) is not allowed\\. Use more strict comparison\\.$#"
+			count: 1
+			path: src/Command/PopulateIndex.php
+
+		-
+			message: "#^Foreach overwrites \\$indexConfig with its value variable\\.$#"
 			count: 1
 			path: src/Command/PopulateIndex.php
 
