--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -36,9 +36,9 @@ parameters:
 			path: src/Command/Refresh.php
 
 		-
-			message: "#^Method Valantic\\\\ElasticaBridgeBundle\\\\DocumentType\\\\Index\\\\AbstractDocument\\:\\:getListingClass\\(\\) should return class\\-string but returns string\\.$#"
+			message: "#^Method Valantic\\\\ElasticaBridgeBundle\\\\Document\\\\AbstractDocument\\:\\:getListingClass\\(\\) should return class\\-string but returns string\\.$#"
 			count: 1
-			path: src/DocumentType/Index/AbstractDocument.php
+			path: src/Document/AbstractDocument.php
 
 		-
 			message: "#^Method Valantic\\\\ElasticaBridgeBundle\\\\Repository\\\\DocumentRepository\\:\\:__construct\\(\\) has parameter \\$documents with no value type specified in iterable type iterable\\.$#"
@@ -46,7 +46,7 @@ parameters:
 			path: src/Repository/DocumentRepository.php
 
 		-
-			message: "#^Property Valantic\\\\ElasticaBridgeBundle\\\\Repository\\\\DocumentRepository\\:\\:\\$documents \\(array\\<Valantic\\\\ElasticaBridgeBundle\\\\DocumentType\\\\Index\\\\DocumentInterface\\>\\) does not accept array\\<string, object\\>\\.$#"
+			message: "#^Property Valantic\\\\ElasticaBridgeBundle\\\\Repository\\\\DocumentRepository\\:\\:\\$documents \\(array\\<Valantic\\\\ElasticaBridgeBundle\\\\Document\\\\DocumentInterface\\>\\) does not accept array\\<string, object\\>\\.$#"
 			count: 1
 			path: src/Repository/DocumentRepository.php
 
