--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -7,14 +7,19 @@ jobs:
 
   phpstan_pimcore10:
 
-    name: phpstan (PHP ${{ matrix.php-versions }} on ${{ matrix.operating-system }})
+    name: phpstan (PHP ${{ matrix.php }} with Pimcore ${{ matrix.pimcore }} (${{ matrix.stability }}) on ${{ matrix.operating-system }})
     runs-on: ${{ matrix.operating-system }}
 
     strategy:
       fail-fast: false
       matrix:
         operating-system: [ ubuntu-latest ]
-        php-versions: [ '8.1' ]
+        php: ['8.1', '8.2']
+        pimcore: ['^10.0']
+        stability: [prefer-lowest, prefer-stable]
+        exclude:
+          - php: '8.2'
+            pimcore: '^10.0'
 
     steps:
       - name: Checkout code
@@ -25,12 +30,17 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php-versions }}
+          php-version: ${{ matrix.php }}
           extensions: curl
           coverage: xdebug
 
-      - name: Install composer dependencies
-        uses: ramsey/composer-install@v2
+      - name: Install dependencies
+        run: |
+          composer require "pimcore/pimcore:${{ matrix.pimcore }}" --no-interaction --no-update
+          composer update --${{ matrix.stability }} --prefer-dist --no-interaction
+
+      - name: List installed dependencies
+        run: composer show -D
 
       - name: Static analysis using phpstan
         run: composer run phpstan -- --error-format=github
