--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "php": "^8.1",
     "ext-json": "*",
     "pimcore/pimcore": "^10.0",
-    "ruflin/elastica": "^7.1"
+    "ruflin/elastica": "^7.1",
+    "symfony/console": "^5.4"
   },
   "require-dev": {
     "bamarni/composer-bin-plugin": "^1.8.2",
