--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,9 +14,10 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ ubuntu-latest ]
-        php: ['8.1']
-        pimcore: ['^10.0']
-        stability: [prefer-lowest, prefer-stable]
+        php: [ '8.1', '8.2' ]
+        pimcore: [ '^11.0' ]
+        stability: [ prefer-lowest, prefer-stable ]
+        elastica: [ '^7.1', '8.x-dev' ]
 
     steps:
       - name: Checkout code
@@ -33,7 +34,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer require "pimcore/pimcore:${{ matrix.pimcore }}" --no-interaction --no-update
+          composer require "pimcore/pimcore:${{ matrix.pimcore }}" "ruflin/elastica:${{ matrix.elastica }}" --no-interaction --no-update
           composer update --${{ matrix.stability }} --prefer-dist --no-interaction
 
       - name: List installed dependencies
