--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "php": "^8.1",
     "ext-json": "*",
     "pimcore/pimcore": "^10.0",
+    "psr/log": "^1.0",
     "ruflin/elastica": "^7.1",
     "symfony/console": "^5.4"
   },
@@ -16,8 +17,9 @@
     "phpstan/phpstan": "^1.10.25",
     "phpstan/phpstan-deprecation-rules": "^1.1.3",
     "phpstan/phpstan-strict-rules": "^1.5.1",
-    "rector/rector": "^0.17.3",
-    "roave/security-advisories": "dev-latest"
+    "rector/rector": "^0.17.6",
+    "roave/security-advisories": "dev-latest",
+    "sentry/sentry": "^3.20.1"
   },
   "license": "MIT",
   "authors": [
