--- a/composer.json
+++ b/composer.json
@@ -7,17 +7,19 @@
     "php": "^8.1",
     "ext-json": "*",
     "pimcore/pimcore": "^10.0",
+    "psr/log": "^1.1",
     "ruflin/elastica": "^7.1",
     "symfony/console": "^5.4"
   },
   "require-dev": {
     "bamarni/composer-bin-plugin": "^1.8.2",
-    "phpstan/extension-installer": "^1.3",
-    "phpstan/phpstan": "^1.10.15",
+    "phpstan/extension-installer": "^1.3.1",
+    "phpstan/phpstan": "^1.10.25",
     "phpstan/phpstan-deprecation-rules": "^1.1.3",
     "phpstan/phpstan-strict-rules": "^1.5.1",
-    "rector/rector": "^0.17.0",
-    "roave/security-advisories": "dev-latest"
+    "rector/rector": "^0.17.3",
+    "roave/security-advisories": "dev-latest",
+    "sentry/sentry": "^3.20"
   },
   "license": "MIT",
   "authors": [
@@ -78,7 +80,8 @@
     "allow-plugins": {
       "bamarni/composer-bin-plugin": true,
       "ocramius/package-versions": true,
-      "phpstan/extension-installer": true
+      "phpstan/extension-installer": true,
+      "php-http/discovery": true
     }
   }
 }
