--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
     "phpstan/phpstan-deprecation-rules": "^1.1.3",
     "phpstan/phpstan-strict-rules": "^1.5.1",
     "rector/rector": "^0.17.3",
-    "roave/security-advisories": "dev-latest",
-    "sentry/sentry": "^3.20"
+    "roave/security-advisories": "dev-latest"
   },
   "license": "MIT",
   "authors": [
