--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,12 +14,9 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ ubuntu-latest ]
-        php: ['8.1', '8.2']
+        php: ['8.1']
         pimcore: ['^10.0']
         stability: [prefer-lowest, prefer-stable]
-        exclude:
-          - php: '8.2'
-            pimcore: '^10.0'
 
     steps:
       - name: Checkout code
