--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,18 @@
     "pimcore/pimcore": "^10.0",
     "psr/log": "^1.0",
     "ruflin/elastica": "^7.1",
-    "symfony/console": "^5.4"
+    "symfony/console": "^5.4",
+    "symfony/lock": "^5.4"
   },
   "require-dev": {
     "bamarni/composer-bin-plugin": "^1.8.2",
     "phpstan/extension-installer": "^1.3.1",
-    "phpstan/phpstan": "^1.10.25",
-    "phpstan/phpstan-deprecation-rules": "^1.1.3",
+    "phpstan/phpstan": "^1.10.34",
+    "phpstan/phpstan-deprecation-rules": "^1.1.4",
     "phpstan/phpstan-strict-rules": "^1.5.1",
-    "rector/rector": "^0.17.6",
+    "rector/rector": "^0.17.13",
     "roave/security-advisories": "dev-latest",
-    "sentry/sentry": "^3.20.1"
+    "sentry/sentry": "^3.21.0"
   },
   "license": "MIT",
   "authors": [
