use Symfony Messenger to handle event-triggered updates and prevent overlaps with indexing command
resolve #51
close #39

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -28,3 +28,8 @@ services:
   Valantic\ElasticaBridgeBundle\Repository\DocumentRepository:
     arguments:
       - !tagged_iterator valantic.elastica_bridge.document
+
+  Valantic\ElasticaBridgeBundle\Messenger\Handler\:
+    resource: '../../Messenger/Handler/*'
+    tags:
+      - { name: messenger.message_handler }
