--- a/composer.json
+++ b/composer.json
@@ -8,20 +8,20 @@
     "ext-json": "*",
     "pimcore/pimcore": "^11.0",
     "psr/log": "^3.0",
-    "ruflin/elastica": "^7.1 || 8.x-dev",
+    "ruflin/elastica": "^7.1 || 8.x-dev#0f6b04b5ebe6df51015fb54b4c455bd7af5b093f",
     "symfony/console": "^6.2",
     "symfony/lock": "^6.2"
   },
   "require-dev": {
     "bamarni/composer-bin-plugin": "^1.8.2",
     "phpstan/extension-installer": "^1.3.1",
-    "phpstan/phpstan": "^1.10.49",
+    "phpstan/phpstan": "^1.10.58",
     "phpstan/phpstan-deprecation-rules": "^1.1.4",
     "phpstan/phpstan-strict-rules": "^1.5.2",
-    "rector/rector": "^0.18.12",
+    "rector/rector": "^0.18.13",
     "roave/security-advisories": "dev-latest",
     "sentry/sentry": "^3.22.1",
-    "symfony/http-client": "^6.4.0"
+    "symfony/http-client": "^6.4.3"
   },
   "license": "MIT",
   "authors": [
@@ -77,6 +77,8 @@
       "./vendor/bin/rector process src"
     ]
   },
+  "prefer-stable": true,
+  "minimum-stability": "dev",
   "config": {
     "sort-packages": true,
     "allow-plugins": {
