--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -17,7 +17,7 @@ jobs:
         php: [ '8.1', '8.2' ]
         pimcore: [ '^11.0' ]
         stability: [ prefer-lowest, prefer-stable ]
-        elastica: [ '^7.1', '8.x-dev' ]
+        elastica: [ '^7.1', '8.x-dev#0f6b04b' ]
 
     steps:
       - name: Checkout code
