--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "valantic/pimcore-elastica-bridge",
-  "version": "3.1.2",
+  "version": "4.0.0-beta.1",
   "description": "Elastica bridge for Pimcore",
   "type": "pimcore-bundle",
   "require": {
