--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "ext-json": "*",
     "pimcore/pimcore": "^11.0",
     "psr/log": "^3.0",
-    "ruflin/elastica": "8.x-dev",
+    "ruflin/elastica": "8.x-dev#78d5a9e",
     "symfony/console": "^6.2",
     "symfony/lock": "^6.2"
   },
