--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "ext-json": "*",
     "pimcore/pimcore": "^11.0",
     "psr/log": "^3.0",
-    "ruflin/elastica": "8.0.0-alpha1",
+    "ruflin/elastica": "^8.0.0",
     "symfony/console": "^6.2",
     "symfony/lock": "^6.2"
   },
@@ -77,8 +77,6 @@
       "./vendor/bin/rector process src"
     ]
   },
-  "prefer-stable": true,
-  "minimum-stability": "dev",
   "config": {
     "sort-packages": true,
     "allow-plugins": {
