do batch processing now increased lock time for final lock before switching indices added log output

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -33,3 +33,8 @@ services:
     resource: '../../Messenger/Handler/*'
     tags:
       - { name: messenger.message_handler }
+
+  Valantic\ElasticaBridgeBundle\Factory\ConsoleOutputFactory: ~
+
+  Symfony\Component\Console\Output\ConsoleOutputInterface:
+    factory: ['@Valantic\ElasticaBridgeBundle\Factory\ConsoleOutputFactory', 'create']
