--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,18 @@
     "psr/log": "^3.0",
     "ruflin/elastica": "^8.0.0",
     "symfony/console": "^6.2",
-    "symfony/lock": "^6.2"
+    "symfony/lock": "^6.2",
+    "symfony/scheduler": "^7.1"
   },
   "require-dev": {
     "bamarni/composer-bin-plugin": "^1.8.2",
     "phpstan/extension-installer": "^1.4.3",
-    "phpstan/phpstan": "^1.12.3",
+    "phpstan/phpstan": "^1.12.7",
     "phpstan/phpstan-deprecation-rules": "^1.2.1",
-    "phpstan/phpstan-strict-rules": "^1.6.0",
-    "rector/rector": "^1.2.5",
+    "phpstan/phpstan-strict-rules": "^1.6.1",
+    "rector/rector": "^1.2.8",
     "sentry/sentry": "^4.9.0",
-    "symfony/http-client": "^6.4.11"
+    "symfony/http-client": "^6.4.12"
   },
   "license": "MIT",
   "authors": [
