--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -4,6 +4,12 @@ services:
     autoconfigure: true
     public: false
 
+  Valantic\ElasticaBridgeBundle\Controller\:
+    resource: '../../Controller/*'
+    public: true
+    tags:
+      - { name: controller.service_arguments}
+
   Valantic\ElasticaBridgeBundle\Command\:
     resource: '../../Command/*'
     tags: [ 'console.command' ]
@@ -34,7 +40,12 @@ services:
     tags:
       - { name: messenger.message_handler }
 
+  Valantic\ElasticaBridgeBundle\Messenger\Middleware\:
+    resource: '../../Messenger/Middleware/*'
+    tags:
+      - { name: messenger.middleware }
   Valantic\ElasticaBridgeBundle\Factory\ConsoleOutputFactory: ~
-
+  Valantic\ElasticaBridgeBundle\Messenger\Scheduler\:
+    resource: '../../Messenger/Scheduler/*'
   Symfony\Component\Console\Output\ConsoleOutputInterface:
     factory: ['@Valantic\ElasticaBridgeBundle\Factory\ConsoleOutputFactory', 'create']
