--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "ruflin/elastica": "^8.0.0",
     "symfony/console": "^6.2",
     "symfony/lock": "^6.2",
-    "symfony/scheduler": "^7.1"
+    "symfony/scheduler": "^7.1|^6.3"
   },
   "require-dev": {
     "bamarni/composer-bin-plugin": "^1.8.2",
